--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,13 +92,21 @@
             android:layout_marginTop="10dp" />
 
         <!-- Gender Selection -->
+        <TextView
+            android:id="@+id/tvGender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="16dp"
+            android:text="Gender"
+            android:textSize="14sp" />
+
         <RadioGroup
             android:id="@+id/rgGender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginHorizontal="10dp">
 
             <RadioButton
                 android:id="@+id/rbMale"
